--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "serve": "vite preview",
-    "build": "vite build",
-    "dev": "vite",
+    "build": "vite build --base=/strontium/",
+    "serve": "vite --host",
     "preview": "vite preview"
   },
   "dependencies": {
